feat: major update for ui and search page

--- a/public/index.html
+++ b/public/index.html
@@ -37,16 +37,16 @@
     <!--begin::Loading markup-->
     <div id="splash-screen" class="splash-screen">
       <img
-        src="%PUBLIC_URL%/media/logos/default-dark.svg"
+        src="%PUBLIC_URL%/media/logos/Logo.png"
         class="dark-logo"
-        alt="Metronic dark logo"
+        alt="DeepAI dark logo"
       />
       <img
-        src="%PUBLIC_URL%/media/logos/default.svg"
+        src="%PUBLIC_URL%/media/logos/Logo.png"
         class="light-logo"
-        alt="Metronic light logo"
+        alt="DeepAI light logo"
       />
-      <span>Loading ...</span>
+      <span>chargement en cours ...</span>
     </div>
     <!--end::Loading markup-->
 
